added ShortUrl entity, controller, repository, tests
