# src/models/index.ts
@@ -1,4 +1,2 @@
-import { User } from './user';
-import { Post } from './post';
-import { Comment } from './comment';
-export { User, Post, Comment };
+import { ShortUrl } from './shorturl';
+export { ShortUrl };
