# src/routes/index.ts
@@ -1,8 +1,6 @@
 import express from 'express';
 import PingController from '../controllers/ping.controller';
-import PostRouter from './post.router';
-import UserRouter from './user.router';
-import CommentRouter from './comment.router';
+import ShortUrlRouter from './shorturl.router';
 
 const router = express.Router();
 
@@ -12,8 +10,6 @@ router.get('/ping', async (_req, res) => {
   return res.send(response);
 });
 
-router.use('/users', UserRouter);
-router.use('/posts', PostRouter);
-router.use('/comments', CommentRouter);
+router.use('/shorturls', ShortUrlRouter);
 
 export default router;
